# DriftQ-Clients-Py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  admin_list.py  basic_produce_consume.py  worker_basic.py
src/driftq/: __init__.py  admin.py  client.py  consumer.py  http_client.py  producer.py  types.py  worker.py
tests/: test_worker.py
