[project]
name = "driftq-clients-py"
version = "0.1.0"
description = "Python SDK for DriftQ (produce, consume, admin)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "BehnamAxo" }]

[project.urls]
Homepage = "https://github.com/BehnamAxo/driftq-clients-py"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
